# archlens

./: .gitignore  README.md  pyproject.toml
CSharpAnalyzer/: CSharpAnalyzer.csproj  CSharpAnalyzer.slnx  Program.cs
CSharpAnalyzer/CSharpAnalyzer.Tests/: CSharpAnalyzer.Tests.csproj
CSharpAnalyzer/CSharpAnalyzer.Tests/Config/: DecompileConfigTests.cs
CSharpAnalyzer/CSharpAnalyzer.Tests/E2E/: SelfTestE2ETests.cs
CSharpAnalyzer/CSharpAnalyzer.Tests/Filter/: TypeFilterTests.cs
CSharpAnalyzer/CSharpAnalyzer.Tests/Formatter/: PlantUmlFormatterTests.cs  YumlFormatterTests.cs
CSharpAnalyzer/CSharpAnalyzer.Tests/Introspection/: TypeInspectorTests.cs
CSharpAnalyzer/CSharpAnalyzer.Tests/Loader/: AssemblyLoaderTests.cs
CSharpAnalyzer/Filter/: TypeFilter.cs
CSharpAnalyzer/Formatter/: PlantUmlFormatter.cs  YumlFormatter.cs
CSharpAnalyzer/Introspection/: TypeInspector.cs
CSharpAnalyzer/Loader/: AssemblyLoader.cs
archlens/: build.py  cli.py  config.py  router.py
archlens/adapters/: csharp_adapter.py  java_adapter.py
csharp/CSharpDecompiler/: Class1.cs  Program.cs
csharp/CSharpDecompiler/Formatter/: YumlFormatter.cs
fixtures/csharp/EventNotifier/: CriticalFaultFilter.cs  EventNotifier.csproj  EventService.cs  Events.cs  Hub.cs  Interfaces.cs  InvalidEventTypeException.cs  Main.cs  Router.cs  Subscribers.cs  Subscription.cs
fixtures/csharp/TempSensor/: .gitignore  TempSensor.puml  TempSensor.yuml
java/: dependency-reduced-pom.xml  pom.xml
tests/: conftest.py  test_csharp_adapter.py  test_java_adapter.py  test_router.py
(+31 files in other folders)
