[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archlens"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python orchestrator for Java and C# UML decompilers"

[project.scripts]
decompile     = "archlens.cli:main"
build-java    = "archlens.build:java"
build-csharp  = "archlens.build:csharp"
build-all     = "archlens.build:all"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[tool.setuptools.packages.find]
include = ["archlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
